# spotify_recorder

./: .pre-commit-config.yaml  .test_ax.py  .test_qobuz_album_dump.py  .test_qobuz_closed.py  .test_qobuz_dump.py  .test_qobuz_dump2.py  .test_qobuz_dump3.py  .test_qobuz_dump_all.py  .test_qobuz_group.py  .test_qobuz_windows.py  .test_qobuz_windows_detail.py  HiResRecorder.spec  NEXT_PROTOTYPE.md  README.md  SpotifyRecorder.spec  SpotifyRecorder_Native.spec  SpotifyRecorder_Next.spec  app_icon.icns  capture_spool.py  coreaudio_devices.py  library_converter.py  pyproject.toml  qobuz_automation.py  qobuz_integration.py  qobuz_playlist.py  qobuz_playlist_job.py  qobuz_texts.txt  recording_catalog.py  settings_transaction.py  source_providers.py  spotify_quality_audit.py  spotify_recorder.py  spotify_recorder2.py  spotify_recorder_next.py  spotify_recorder_next_services.py  spotify_recorder_services.py
.github/workflows/: bandit.yml  secret-scan.yml
SpotifyRecorder.app/Contents/: Info.plist
SpotifyRecorder.app/Contents/MacOS/: applet
SpotifyRecorder.app/Contents/Resources/Scripts/: main.scpt
SpotifyRecorder.app/Contents/_CodeSignature/: CodeResources
tests/: test_audio_quality.py  test_capture_spool.py  test_coreaudio_rate_sync.py  test_dj_export.py  test_flac_export.py  test_library_converter.py  test_qobuz_automation.py  test_qobuz_integration.py  test_qobuz_playlist.py  test_quality_audit.py  test_recording_catalog.py  test_settings_transaction.py  test_source_automation.py
