[project]
name = "hi-res-recorder"
version = "4.3.0"
description = "Unity-gain recorder with native archive and SoXR VHQ 24/48 DJ exports"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "customtkinter>=5.2.2",
    "mutagen>=1.47.0",
    "numpy>=2.4.4",
    "pyinstaller>=6.21.0",
    "pyloudnorm>=0.2.0",
    "scipy>=1.18.0",
    "sounddevice>=0.5.5",
    "soundfile>=0.14.0",
    "soxr>=1.1.0",
]
