[project]
name = "hi-res-recorder"
version = "5.0.0"
description = "Native-rate recorder and verified SoXR VHQ 24/48 DJ library builder"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "av>=18.0.0",
    "customtkinter>=5.2.2",
    "mutagen>=1.47.0",
    "numpy>=2.4.4",
    "pyinstaller>=6.21.0",
    "pyloudnorm>=0.2.0",
    "pyobjc-framework-applicationservices>=12.2.1",
    "scipy>=1.18.0",
    "sounddevice>=0.5.5",
    "soundfile>=0.14.0",
    "soxr>=1.1.0",
]
